fixed iframe being squished for small screens

--- a/src/apps/active-preview/Preview.less
+++ b/src/apps/active-preview/Preview.less
@@ -20,7 +20,10 @@
     .Logo {
       display: flex;
       align-items: center;
-      margin-right: 16px;
+      margin-right: 8px;
+      @media screen and (max-width: 1280px) {
+        display: none;
+      }
     }
 
     .ActionInfo {
